[package]
name = "tide_serve_dir_bug"
version = "0.1.0"
authors = ["Mendelt Siebenga <mendelt@mendelt.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = ["attributes"] }
tide = "0.15.0"
